# utils_server

./: Cargo.toml  Readme.MD  curl1.sh
src/: main.rs
src/utils/: mod.rs
src/utils/appstate/: appstate.rs  mod.rs
src/utils/cert/: cert.rs
src/utils/common/: build_zip.rs  common_types_and_formats.rs  comp_decompress.rs  download_types_and_formats.rs  mod.rs  processed_invoice_types.rs  san_desanitize.rs  target_types_and_formats.rs  xslt_struct.rs  zip_utils.rs
src/utils/convert_invoices/: convert_and_zip_worker.rs  extract_xslt_key_from_xml.rs  get_xslt_from_objstore.rs  invoice_conversion_manager.rs  mod.rs
src/utils/database_manager/: init_database.rs  init_database_tests.rs  mod.rs
src/utils/docs_from_objstore/: docs_from_objstore.rs  docs_from_objstore_tests.rs  extract_xslt_key_from_xml.rs  get_ubl_decomp_from_objstore.rs  get_xslt_from_objstore.rs  mod.rs  old_docstoobjstore.txt  process_docs_from_objstore_spawn.rs
src/utils/download_request/: download_request.rs  download_request_tests.rs  download_request_types.rs  mod.rs
src/utils/errors/: app_errors.rs  db_errors.rs  doc_processing_errors.rs  download_request_errors.rs  fatal_process_errors.rs  invoice_conversion_errors.rs  log_error.rs  mod.rs  object_store_errors.rs  process_errors.rs  processing_errors.rs  xml_errors.rs  xslt_errors.rs
src/utils/get_and_process_invoices/: mod.rs  process_into_html.rs  process_invoices.rs  process_invoices_types.rs  process_single_invoice_into_html.rs
src/utils/incoming_invoice/: get_incoming_invoice_recs_afterthis.rs  incoming_invoice_rec.rs  mod.rs
(+28 files in other folders)
