[package]
name = "utils_server"
version = "0.1.0"
edition = "2024"

[lib]
name = "libs"
path = "src/lib.rs"

[[bin]]
name = "grpc_server"
path = "src/bin/grpc_server.rs"

[[bin]]
name = "rest_server"
path = "src/bin/rest_server.rs"

[dependencies]
anyhow = "1.0.71"
tiberius = { version = "0.12.3" }
bb8 = "=0.9.0"
bb8-tiberius = "0.16.0"
serde = { version = "~1.0.219", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.140" } # Serde serialization/deserialization of JSON data.
serde_with = { version = "3.9.1", features = ["base64"] }
tokio = { version = "~1.45.1", features = ["full", "test-util"] } # Event-driven, non-blocking I/O platform.
axum = { version = "~0.8.4" } # Web framework that focuses on ergonomics and modularity.
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
flate2 = "1.0"  # For zip compression
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
opendal = { version = "0.51", features = ["services-s3", "services-postgresql"] }
regex = "1"
lazy_static = "1.4" # Optional, but good for compiling regex once
once_cell = "1.19"
roxmltree = "0.21"
xz2 = "0.1"          # XZ/LZMA decode
zip = "0.6"
tar = "0.4"

[dev-dependencies]
axum-test = { version = "17.3.0" } # Library for writing tests for web servers written using Axum.
